# eval-gate

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
action/: action.yml  package-lock.json  package.json
action/src/: main.test.ts  main.ts
evalgate/: __init__.py  adapters.py  cli.py  dataset.py  drift.py  report.py  scorers.py
examples/: README.md  basic_dataset.yaml  command_dataset.jsonl  command_dataset.yaml  echo_target.py  golden_dataset.jsonl
mockserver/: __init__.py  server.py
scripts/: scrub_check.py
tests/: test_adapters.py  test_cli_e2e.py  test_dataset.py  test_drift.py  test_report.py  test_scorers.py  test_smoke.py
