[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalgate"
version = "0.1.0"
description = "Regression-eval CI gate for LLM/agent pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sam Latino", email = "Latinosammy2@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "numpy>=1.26",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
evalgate = "evalgate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["evalgate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
